index and portfolio done, contact needs css formatted

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"  />
 	
-	<title>Helen Smith Portfolio</title>
+	<title>Helen Smith Portfolio, Home</title>
 		
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -33,8 +33,9 @@
 	<main class="clear">
 		<!--start left content-->
 		<section class="left">
-			<h2 class="heading">Portfolio</h2>
+
 				<article><!--validator wants text??-->
+				<h2 class="heading">About Me</h2>
 					<img class="left gutter_right" src="assets/images/headshot.jpg" alt="Image of Helen Smith photography by Hannah Leigh">
 
 						<p class="rigth"> <strong>Helen</strong> is production artist primarily working in the areas of experiential design, way finding, prepress automation and 3D production. Helen is also a active printmaker, watercolorist and photographer, with an interest in the convergence of technology, fine arts and commercial arts. </p>
