--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 		<aside class="right">
 			<h3 class="heading">Connect with Me</h3>
 				<!--default inline image string -->
-				<a href="https://github.com/intaglioplate312"><img src="assets/images/icon_github.png" alt="github icon"></a>
-				<a href="https://www.linkedin.com/in/justofflakeshoredrive/"><img src="assets/images/icon_linkedin.png" alt="linkedin icon"></a>
-				<a href="https://stackexchange.com/users/10752583/smith93901"><img src="assets/images/icon_stackoverflow.png" alt="stackoverflow icon"></a>
+				<a href="https://github.com/intaglioplate312" target="_blank"><img src="assets/images/github_icon.png" alt="github icon"></a>
+				<a href="https://www.linkedin.com/in/justofflakeshoredrive/" target="_blank"><img src="assets/images/linkedin_icon.png" alt="linkedin_icon.png"></a>
+				<a href="https://stackexchange.com/users/10752583/smith93901" target="_blank"><img src="assets/images/stackoverflow_icon.png" alt="stackoverflow_icon.png"></a>
 		</aside>
 	</main><!--end main contnet area-->
 
