Bonus, sticky footer, hover effect and kuler color.

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 	<header> 
 		<!-- start logo-->
 		<div class="mast_box">
-			<h1 class="left">Helen E. Smith</h1>
+			<a href="index.html"><h1 class="left">Helen E. Smith</h1></a>
 			<!-- start naviagtion bar-->
 			<nav>
 	              <ul>
@@ -64,7 +64,7 @@
 
 	<footer>
 		<div class="mast_box">
-			<h6>&#9400; 2017 Helen Smith</h6>
+			<h6>&#9400; 2017 Helen E. Smith</h6>
 		</div><!--close mast_box-->
 	</footer>
 
