--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><!--validator wants me to add lang-en??-->
+<html lang="en"><!--validator wants me to add lang-en??-->
 <head>
 	<meta charset="utf-8"  />
 	
@@ -18,13 +18,13 @@
 			<h1 class="left">Helen E. Smith</h1>
 			<!-- start naviagtion bar-->
 			<nav>
-	              <ul>
-	                <li><a href="contact.html">Contact</a></li>
+	            <ul>
+	            	<li><a href="contact.html">Contact</a></li>
 	                <li>|</li><!--is there a cleaner way to do this?-->
 	                <li><a href="portfolio.html">Portfolio</a></li>
 	                <li>|</li>
 	                <li><a href="index.html">About</a></li>
-	                </ul>
+	            </ul>
 			</nav>
 		</div> <!--close mast_box-->
 	</header> 
@@ -33,22 +33,22 @@
 	<main class="clear">
 		<!--start left content-->
 		<section class="left">
-
-				<article><!--validator wants text??-->
-				<h2 class="heading">About Me</h2>
+			<h2 class="heading">About Me</h2>	
+				<article>
+				<!--validator wants text??-->
 					<img class="left gutter_right" src="assets/images/headshot.jpg" alt="Image of Helen Smith photography by Hannah Leigh">
 
-						<p class="rigth"> <strong>Helen</strong> is production artist primarily working in the areas of experiential design, way finding, prepress automation and 3D production. Helen is also a active printmaker, watercolorist and photographer, with an interest in the convergence of technology, fine arts and commercial arts. </p>
-								<!--Artist Statmenet BS till I write a proper bio... Helen Smith (Calgary, Canada) is an artist who works in a variety of media. With a subtle minimalistic approach, Smith considers making art a craft which is executed using clear formal rules and which should always refer to social reality.-->
+						<!--Helen is production artist primarily working in the areas of experiential design, way finding, prepress automation and 3D production. Helen is also a active printmaker, watercolorist and photographer, with an interest in the convergence of technology, fine arts and commercial arts. Need to think this through some more-->
+						<p class="rigth">Helen Smith (Calgary, Canada) is an artist who works in a variety of media. With a subtle minimalistic approach, Smith considers making art a craft which is executed using clear formal rules and which should always refer to social reality.</p>
 						<br>
 						<p>Her practice provides a useful set of allegorical tools for manoeuvring with a pseudo-minimalist approach in the world of art: these meticulously planned works resound and resonate with images culled from the fantastical realm of imagination. By applying abstraction, she creates work in which a fascination with the clarity of content and an uncompromising attitude towards conceptual and minimal art can be found. The work is aloof and systematic and a cool and neutral imagery is used.</p>
 						<br>
 						<p>Her works doesn't reference recognisable form. The results are deconstructed to the extent that meaning is shifted and possible interpretation becomes multifaceted. By focusing on techniques and materials, she creates intense personal moments masterfully created by means of rules and omissions, acceptance and refusal, luring the viewer round and round in circles.</p>
 						<br>
-						<p>Her works are notable for their perfect finish and tactile nature. This is of great importance and bears witness to great craftsmanship. Helen Smith currently lives and works in Chicago.</p>
-
+						<p>Her works are notable for their perfect finish and tactile nature. This is of great importance and bears witness to great craftsmanship. Helen Smith currently lives and works in Chicago. Can you believe this drivel? I actually paid a copywriter, but I got three CAAPs grants so I guess&hellip;</p>
 				</article>
 			</section><!--end left content-->
+		
 		<!--start sidebar so to speak-->			
 		<aside class="right">
 			<h3 class="heading">Connect with Me</h3>
@@ -61,7 +61,7 @@
 
 	<footer>
 		<div class="mast_box">
-			<h6>&#9400; 2017 Helen Smith</h6>
+			<h6>&#9400; 2017 Helen E. Smith</h6>
 		</div><!--close mast_box-->
 	</footer>
 
