--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 	<header> 
 		<!-- start logo-->
 		<div class="mast_box">
-			<h1 class="left">Helen E. Smith</h1>
+			<a href="index.html"><h1 class="left">Helen E. Smith</h1></a>
 			<!-- start naviagtion bar-->
 			<nav>
 	              <ul>
@@ -33,9 +33,9 @@
 	<main class="clear">
 		<!--start left content-->
 		<section class="left">
-			
+			<h2 class="heading">Portfolio</h2>
 				<article><!--validator wants text??-->
-				<h2 class="heading">Portfolio</h2>
+				
 				
 				<div class="gallery_box left">
 					<img src="assets/images/ima.jpg" alt="This will be a link to a game sample">
@@ -78,7 +78,7 @@
 
 	<footer>
 		<div class="mast_box">
-			<h6>&#9400; 2017 Helen Smith</h6>
+			<h6>&#9400; 2017 Helen E. Smith</h6>
 		</div><!--close mast_box-->
 	</footer>
 
