minor tweaks to images and content-article border.

--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,9 @@
 	<main class="clear">
 		<!--start left content-->
 		<section class="left">
-		<h2 class="heading">Contact</h2>
 			<article>
-	
-				<form>
+				<h2 class="heading">Contact</h2>
+				<form><!-- It validates, but seems wrong, but out of time so here it is-->
   					<h4>Name</h4>
   					<input type="text" name="name" value="John Smith">
   					<br>
@@ -48,10 +47,9 @@
   					</textarea>
   					<br>
   					<input type="submit" value="Submit">
-				</form>
-
-				</article>
-			</section><!--end left content-->
+				</form>	
+			</article>
+		</section><!--end left content-->
 		<!--start sidebar so to speak-->			
 		<aside class="right">
 			<h3 class="heading">Connect with Me</h3>
