--- a/index.html
+++ b/index.html
@@ -33,21 +33,20 @@
 	<main class="clear">
 		<!--start left content-->
 		<section class="left">
-			<h2 class="heading">About Me</h2>	
-				<article>
-				<!--validator wants text??-->
+			<article>
+				<h2 class="heading">About Me</h2>	
 					<img class="left gutter_right" src="assets/images/headshot.jpg" alt="Image of Helen Smith photography by Hannah Leigh">
 
-						<!--Helen is production artist primarily working in the areas of experiential design, way finding, prepress automation and 3D production. Helen is also a active printmaker, watercolorist and photographer, with an interest in the convergence of technology, fine arts and commercial arts. Need to think this through some more-->
+						<!--Can you believe this drivel? But I got three CAAPs grants so I guess art speak rules!!-->
 						<p class="rigth">Helen Smith (Calgary, Canada) is an artist who works in a variety of media. With a subtle minimalistic approach, Smith considers making art a craft which is executed using clear formal rules and which should always refer to social reality.</p>
 						<br>
 						<p>Her practice provides a useful set of allegorical tools for manoeuvring with a pseudo-minimalist approach in the world of art: these meticulously planned works resound and resonate with images culled from the fantastical realm of imagination. By applying abstraction, she creates work in which a fascination with the clarity of content and an uncompromising attitude towards conceptual and minimal art can be found. The work is aloof and systematic and a cool and neutral imagery is used.</p>
 						<br>
 						<p>Her works doesn't reference recognisable form. The results are deconstructed to the extent that meaning is shifted and possible interpretation becomes multifaceted. By focusing on techniques and materials, she creates intense personal moments masterfully created by means of rules and omissions, acceptance and refusal, luring the viewer round and round in circles.</p>
 						<br>
-						<p>Her works are notable for their perfect finish and tactile nature. This is of great importance and bears witness to great craftsmanship. Helen Smith currently lives and works in Chicago. Can you believe this drivel? I actually paid a copywriter, but I got three CAAPs grants so I guess&hellip;</p>
-				</article>
-			</section><!--end left content-->
+						<p>Her works are notable for their perfect finish and tactile nature. This is of great importance and bears witness to great craftsmanship. Helen Smith currently lives and works in Chicago. </p>
+			</article>
+		</section><!--end left content-->
 		
 		<!--start sidebar so to speak-->			
 		<aside class="right">
